--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -22,8 +22,8 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           file: "net/grpc/gateway/docker/prereqs/Dockerfile"
-          push: false
-          tags: bourneid/prereqs
+          push: true
+          tags: bourneid/grpc-web-demo:prereqs
       - name: Build server
         uses: docker/build-push-action@v3
         with:
